# minimal-sgx-app

./: .gitignore  CMakeLists.txt  README.md
App/: CMakeLists.txt  Enclave_u.c  Enclave_u.h  config.cpp  config.h  logging.h  main.cpp  ocalls.cpp  rpc.cpp  rpc.h  utils.cpp  utils.h
App/services/: enclave.proto
Enclave/: CMakeLists.txt  Enclave.edl  Enclave_t.c  Enclave_t.h  debug.c  debug.h  ecall_attestation.cpp  glue.c  glue.h  macros.h
cmake/: FindGRPC.cmake  FindSGXPSW.cmake
scripts/: download_sdk.sh
